<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/top_image"
        android:scaleType="fitCenter"
        android:src="@drawable/dealer"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowMainMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="32dp"
        android:translationZ="2dp"
        android:visibility="visible"
        app:constraint_referenced_ids="new_game_button,exit_button"
        app:flow_verticalGap="16dp"
        app:flow_verticalStyle="packed"
        app:flow_wrapMode="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.constraintlayout.helper.widget.Flow>

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caesar_dressing"
        android:gravity="center"
        android:padding="8dp"
        android:shadowColor="@color/grey_lite"
        android:shadowDx="5"
        android:shadowDy="15"
        android:shadowRadius="15"
        android:text="@string/main_title"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:textStyle="bold"
        android:translationZ="7dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/author_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:padding="8dp"
        android:shadowColor="@color/grey_lite"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/by_mike_schvedov"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:translationZ="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_hit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/button_hit"
        android:fontFamily="@font/caesar_dressing"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/hit_button_label"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_restart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/button_restart"
        android:elevation="20dp"
        android:fontFamily="@font/caesar_dressing"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/restart"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_stand"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/button_stand"
        android:elevation="20dp"
        android:fontFamily="@font/caesar_dressing"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/stand_button_label"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_game_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/new_game_button"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/caesar_dressing"
        android:padding="24dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/new_game_button_label"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:background="@drawable/exit_button"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/caesar_dressing"
        android:padding="24dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/exit_button_label"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/new_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/game_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caesar_dressing"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/player_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealer_score" />

    <TextView
        android:id="@+id/dealer_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/player_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/player_card1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/player_card2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/player_card3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/player_card4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/player_card5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/player_card6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/player_card7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />


    <TextView
        android:id="@+id/dealer_card1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/dealer_card2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/dealer_card3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/dealer_card4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/dealer_card5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/dealer_card6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/dealer_card7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/card_custom"
        android:gravity="center_horizontal|center_vertical"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="454dp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowPlayer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:constraint_referenced_ids="player_card1,player_card2,player_card3,player_card4,player_card5,player_card7,player_card6"
        app:flow_horizontalGap="4dp"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline6" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowDealer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:constraint_referenced_ids=",dealer_card1,dealer_card6,dealer_card5,dealer_card7,dealer_card3,dealer_card4,dealer_card2"
        app:flow_horizontalGap="4dp"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />


</androidx.constraintlayout.widget.ConstraintLayout>